// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Overlay /> snapshot should match snapshot 1`] = `
<Overlay>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with className 1`] = `
<Overlay
  className="example-class"
>
  <div
    className="example-class md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with color 1`] = `
<Overlay
  color="secondary"
>
  <div
    className="md-overlay-wrapper"
    data-color="secondary"
    data-fullscreen={false}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with focusLockProps 1`] = `
<Overlay
  focusLockProps={
    Object {
      "returnFocus": true,
    }
  }
>
  <FocusLock
    as="div"
    autoFocus={true}
    disabled={false}
    lockProps={Object {}}
    noFocusGuards={false}
    persistentFocus={false}
    returnFocus={true}
  >
    <div
      data-focus-guard={true}
      key="guard-first"
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      key="guard-nearest"
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <SideEffect(FocusWatcher)
        autoFocus={true}
        disabled={false}
        observed={
          <div
            data-focus-lock-disabled="false"
          >
            <div
              class="md-overlay-wrapper"
              data-color="primary"
              data-fullscreen="false"
            />
          </div>
        }
        onActivation={[Function]}
        onDeactivation={[Function]}
        persistentFocus={false}
        shards={Array []}
      >
        <FocusWatcher
          autoFocus={true}
          disabled={false}
          observed={
            <div
              data-focus-lock-disabled="false"
            >
              <div
                class="md-overlay-wrapper"
                data-color="primary"
                data-fullscreen="false"
              />
            </div>
          }
          onActivation={[Function]}
          onDeactivation={[Function]}
          persistentFocus={false}
          shards={Array []}
        />
      </SideEffect(FocusWatcher)>
      <div
        className="md-overlay-wrapper"
        data-color="primary"
        data-fullscreen={false}
      />
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </FocusLock>
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with fullscreen 1`] = `
<Overlay
  fullscreen={true}
>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={true}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with id 1`] = `
<Overlay
  id="example-id"
>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
    id="example-id"
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with style 1`] = `
<Overlay
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
    style={
      Object {
        "color": "pink",
      }
    }
  />
</Overlay>
`;
